<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- SMS Permission Status -->
        <TextView
            android:id="@+id/sms_permission_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_permission_denied"
            android:textSize="16sp"
            android:paddingBottom="8dp" />

        <Button
            android:id="@+id/button_request_sms_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_sms_permission_btn" />

        <!-- Notifcation Permission Status -->
        <TextView
            android:id="@+id/notification_permission_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_permission_denied"
            android:textSize="16sp"
            android:paddingBottom="8dp" />

        <Button
            android:id="@+id/button_request_notification_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_notification_permission_btn" />



        <!-- Notification Listener Status -->
        <TextView
            android:id="@+id/notification_listener_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_listener_inactive"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <Button
            android:id="@+id/button_enable_notification_listener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_notification_listener_btn" />

        <!-- Input: App Package -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_app_package_caption"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/edit_app_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_app_package_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/button_use_standard_sms_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sms_app_caption" />

        <!-- Input: Title to match -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_title_caption"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_title_hint"
            android:inputType="text" />

        <!-- Input: Content to match -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_content_caption"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_content_hint"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_number_caption"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/edit_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_number_hint"
            android:inputType="phone"
            android:ems="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_answer_caption"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/edit_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_answer_hint"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_delay_caption"
            android:paddingTop="16dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <EditText
                android:id="@+id/edit_min_delay"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="5"
                android:inputType="number" />
            <EditText
                android:id="@+id/edit_max_delay"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="30"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>